--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -3,6 +3,7 @@ bs4==0.0.1
 certifi==2020.6.20
 chardet==3.0.4
 idna==2.10
+peewee==3.13.3
 requests==2.24.0
 requests-cache==0.5.2
 soupsieve==2.0.1
